--- a/page1/css/index.css
+++ b/page1/css/index.css
@@ -246,3 +246,11 @@
 			background-color: white;
 			color: black;
 		}
+		#wrap {
+			background: #555;
+			height: 100vh;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
